# Argus

./: .env.template  .gitignore  README.md  pyproject.toml
argus/: __main__.py  main.py
argus/core/: __init__.py  classifier.py  dispatcher.py  reporter.py  scorer.py
argus/models/: __init__.py  domain.py
argus/payloads/: loader.py
docs/: README.md  _INDEX.md
docs/01_ARCHITECTURE/: 00_system_overview.md
docs/02_ADR/: README.md
payloads/: attacks.yaml
tests/: test_classifier.py  test_cli.py  test_dispatcher.py  test_scorer.py
